# bento

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG_REPOSITORY_MIXINS.md  CI_CD_DIAGNOSIS.md  CI_CD_FINAL_SUCCESS.md  CI_CD_GUIDE.md  CI_CD_SETUP_COMPLETE.md  CI_CD_SUCCESS_SUMMARY.md  CI_CD_SUMMARY.md  CI_CD_TESTING_GUIDE.md  CI_CD_TEST_SUMMARY.md  CODE_REVIEW.md  COMMAND_RENAME_SUMMARY.md  COMMIT_STRATEGY.sh  COMPLETION_SUMMARY.md  ECOMMERCE_INTERCEPTOR_COMPLETION.md  FINAL_CI_CD_COMPLETION.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIX_AND_REDEPLOY.sh  LICENSE  LICENSE.PROPRIETARY  LICENSE_CHANGE_PLAN.md  LICENSE_HISTORY.md  MAKEFILE_SMART_DETECT.md  MIGRATION_SUMMARY.md  MIGRATION_UBUNTU.md  Makefile  PACKAGING_GUIDE.md  QUICK_REFERENCE.md  README.md  README_UV.md  RELEASE_CHECK_GUIDE.md  SOFT_DELETE_DEFAULT_BEHAVIOR.md  UBUNTU_QUICK_REF.md  bento.txt  change-license.sh  check-release.sh  check_db_tables.py  (+9 more)
applications/contract-governance/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  test_startup.py
applications/contract-governance/src/contract_governance/: __init__.py  init_db.py  models.py  schemas.py
applications/contract-governance/tests/: test_api.py
applications/my-shop/: .env.example  .gitignore  ARCHITECTURE_SERVICES_PLACEMENT.md  CACHE_INVALIDATION_GUIDE.md  CACHE_PHASE1_COMPLETED.md  CACHE_RELIABILITY_ROADMAP.md  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  README_ARCHITECTURE.md  alembic.ini  config.py  demo_event_handlers.py  demo_repository_mixins.py  final_test_result.txt  main.py  manual_test_outbox.py  pyproject.toml  pytest.ini  run_scenario_clean.sh  scenario_complete_shopping_flow.py  test_identity_simple.py  test_order_flow.sh  test_outbox_end_to_end.py  test_outbox_projector.py  test_result.txt  verify_outbox.sql
applications/my-shop/alembic/: env.py
applications/my-shop/api/: __init__.py  deps.py  exception_handlers.py  orders.py  products.py  router.py  users.py
applications/my-shop/api/schemas/: __init__.py  order.py  product.py  user.py
applications/my-shop/config/: .env.example  __init__.py  adapters_config.example.py  cache_relations.py  cache_setup.py  settings.py  warmup_config.py
applications/my-shop/contexts/: __init__.py
applications/my-shop/contexts/catalog/: __init__.py
applications/my-shop/contexts/identity/: __init__.py
applications/my-shop/contexts/ordering/: CACHE_USAGE_EXAMPLE.md  SPECIFICATION_USAGE.md  __init__.py
applications/my-shop/contexts/shared/: README.md
applications/my-shop/docs/: ADAPTERS_SUMMARY.md  API_MIDDLEWARE_INTEGRATION.md  BASE_ADAPTER_ANALYSIS.md  BENTO_DOMAIN_LAYER_REVIEW.md  BENTO_FRAMEWORK_ALIGNMENT_AUDIT.md  BENTO_REPOSITORY_AUDIT_REPORT.md  BOOTSTRAP_BEST_PRACTICES.md  BOOTSTRAP_V2_UPDATE_SUMMARY.md  CATALOG_PORTS_ADDED.md  COMPLETE_PORTS_GUIDE.md  DIRECTORY_COMPARISON.md  DOMAIN_IMPROVEMENTS_COMPLETED.md  FILE_ORGANIZATION_FINAL.md  FILE_ORGANIZATION_PLAN.md  FILE_ORGANIZATION_SUMMARY.md  FINAL_STRUCTURE.md  FINAL_TEST_ANALYSIS_AND_SOLUTION.md  HEXAGONAL_ARCHITECTURE.md  I18N_INTEGRATION.md  IDEMPOTENCY_ARCHITECTURE.md  IDEMPOTENCY_BEST_PRACTICE.md  IDEMPOTENCY_USAGE.md  MIDDLEWARE_CONFIGURATION.md  MIDDLEWARE_USAGE_GUIDE.md  MIGRATION_COMPLETED.md  MULTI_TENANCY_ANALYSIS.md  OBSERVABLE_HANDLER_DEPENDENCY_FIX.md  PHASE_2_COMPLETE.md  PHASE_2_DTO_MAPPER_COMPLETE.md  PHASE_2_DTO_MIGRATION.md  PHASE_2_PROGRESS.md  PORT_IMPROVEMENT_PLAN.md  PORT_REFACTOR_COMPLETED.md  QUICK_START.md  README.md  REAL_ADAPTERS_IMPLEMENTATION_GUIDE.md  REFACTOR_COMPLETED.md  REFACTOR_PLAN.md  REPOSITORY_PATTERN_GUIDE.md  SERVICE_DISCOVERY_ANALYSIS.md  (+5 more)
applications/my-shop/docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_CHECKLIST.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SPECIFICATION_PLACEMENT.md  ARCHITECTURE_SUMMARY.md  BC_ISOLATION_GUIDE.md  BENTO_ISSUES_ANALYSIS.md  ORDER_AGGREGATE_GUIDE.md
applications/my-shop/docs/guides/: MOCK_ADAPTERS_GUIDE.md  REDIS_INVENTORY_ADAPTER_GUIDE.md  SERVICE_DISCOVERY_GUIDE.md  USING_REPOSITORY_MIXINS.md
applications/my-shop/docs/implementation/: BOOTSTRAP_REFACTORING.md  DATABASE_ENGINE_SOLUTION.md  DI_MODULE_CONSOLIDATION.md  MIDDLEWARE_IMPLEMENTATION_STATUS.md  MIDDLEWARE_USAGE_GUIDE.md
applications/my-shop/docs/migration/: MIGRATION_NOTES.md
applications/my-shop/runtime/: __init__.py  bootstrap.py  bootstrap_best_practice.py  bootstrap_v2.py
applications/my-shop/runtime/config/: __init__.py  app_config.py  middleware_config.py  runtime_config.py
applications/my-shop/runtime/modules/: __init__.py  catalog.py  identity.py  infra.py  ordering.py  service_discovery.py
applications/my-shop/scripts/: README.md  add_cqrs_decorators.py  add_cqrs_decorators_remaining.py  check_outbox.py  fix_use_case_deps.py  init_db.py  seed_data.py  test_user_identity.py
applications/my-shop/scripts/debug/: debug_tenant.py
applications/my-shop/scripts/demo/: demo_event_handlers.py  example_event_handlers.py  scenario_complete_shopping_flow.py
applications/my-shop/scripts/test/: test_idempotency.sh  test_idempotency_simple.sh  test_middleware.sh  test_order_flow.sh
applications/my-shop/shared/: openapi.py
applications/my-shop/shared/api/: auth_routes.py  router_registry.py
applications/my-shop/shared/auth/: __init__.py  stub_authenticator.py
applications/my-shop/shared/exceptions/: __init__.py  handlers.py
applications/my-shop/shared/i18n/: __init__.py  catalog.py  renderer.py
applications/my-shop/tests/: README.md  conftest.py  e2e_outbox_test.py
applications/my-shop/warmup/: strategies.py
applications/my-shop/warmup-demo/: README.md  __init__.py  fastapi_integration.py  scheduled_tasks.py  setup.py  strategies.py
legend/projects/gatekeeper/: __init__.py  pyproject.toml
legend/projects/gatekeeper/app/: main.py
legend/projects/godata/: NAJIA_IMPLEMENTATION_SUMMARY.md  README.md  beautiful_matrix.py  hexagram_matrix.json  main.py  najia_mapping_export.json  performance_test.py  pyproject.toml  run_najia.py  run_tests.py  simple_performance_test.py
legend/projects/guardian/: __init__.py  main.py  pyproject.toml
(+1928 files in other folders)
