[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bento-framework"
version = "1.0.0"
description = "Bento Framework — hexagonal, CQRS-friendly, multi-tenant ready."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name="Bento", email="oss@example.com" }]
dependencies = [
  "pydantic>=2.7,<3.0",
  "fastapi>=0.115,<2.0",
  # Phase 2: Persistence dependencies
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "aiosqlite>=0.19.0",                    # SQLite async driver (development)
  "asyncpg>=0.29",                        # PostgreSQL async driver (production)
  "alembic>=1.13",                        # Database migrations
  # Phase 4: Cache dependencies
  "redis>=5.0,<8.0",  # ✅ 兼容 Redis 5.x, 6.x, 7.x
  # Phase 5: Messaging dependencies
  "pulsar-client>=3.4",                   # Apache Pulsar client (Ubuntu/Linux supported)
  # Utils
  "tenacity>=8.2",                        # Retry mechanism
  "python-dateutil>=2.8",
  "jinja2>=3.1",                          # Template engine for CLI code generation
]

[project.scripts]
bento = "bento.toolkit.cli:main"

[project.optional-dependencies]
dev = [
  "uvicorn>=0.30,<1.0",
  "httpx>=0.27",
  # Testing
  "pytest>=8.0,<10.0",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=4.1",                      # Coverage reporting
  "pytest-benchmark>=4.0",                # Performance benchmarks
  "faker>=22.0",                          # Test data generation
  # Type checking
  "mypy>=1.11,<2.0",
  "types-python-dateutil",
  "types-redis",
  # Code quality
  "ruff>=0.6,<1.0",
  "import-linter>=2.0,<3.0",
  # Documentation
  "sphinx>=7.2",                          # API docs generation
  "sphinx-rtd-theme>=2.0",
]

[tool.setuptools]
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bento*"]
namespaces = false

[tool.setuptools.package-data]
"bento.toolkit" = ["templates/**/*", "templates/**/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
  "-ra",                                  # Show summary of all test outcomes
  "--strict-markers",                     # Strict marker validation
  "--strict-config",                      # Strict config validation
  "--cov=src",                            # Coverage source
  "--cov-report=term-missing",            # Show missing lines
  "--cov-report=html",                    # Generate HTML report
  "--cov-fail-under=70",                  # Fail if coverage < 70%
]
testpaths = ["tests"]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "performance: Performance benchmarks",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["deploy","docs","examples","legend"]

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
ignore = ["E501"]  # 忽略行长度检查（使用 line-length = 100）

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.12"
# Strict mode
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_optional = true
# Exclude
exclude = ["deploy", "docs", "old", "examples"]
# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false          # Allow untyped test functions

[tool.importlinter]
root_package = "bento"

# ========================================================================
# Contract 1: Hexagonal Layering - 严格的分层依赖
# ========================================================================
[[tool.importlinter.contracts]]
name = "Hexagonal layering"
type = "layers"
layers = [
  "bento.core",
  "bento.domain",
  "bento.application",
  "bento.adapters",
  "bento.interfaces",
]
ignore_imports = []

# ========================================================================
# Contract 2: Domain 层的 Ports 必须是 Protocol
# ========================================================================
[[tool.importlinter.contracts]]
name = "Domain ports are protocols"
type = "forbidden"
source_modules = ["bento.domain.ports"]
forbidden_modules = ["bento.adapters"]
ignore_imports = []

# ========================================================================
# Contract 3: Application 层的 Ports 必须是 Protocol
# ========================================================================
[[tool.importlinter.contracts]]
name = "Application ports are protocols"
type = "forbidden"
source_modules = ["bento.application.ports"]
forbidden_modules = ["bento.adapters"]
ignore_imports = []

# ========================================================================
# Contract 4: Adapters 不能依赖 Domain 或 Application 的内部实现
# ========================================================================
[[tool.importlinter.contracts]]
name = "No adapters into domain or application"
type = "forbidden"
source_modules = ["bento.adapters"]
forbidden_modules = ["bento.domain", "bento.application"]
allow_indirect_imports = false

# ========================================================================
# Contract 5: Examples 只能导入 Interfaces 和 Runtime
# ========================================================================
[[tool.importlinter.contracts]]
name = "Examples may only import interfaces and runtime"
type = "forbidden"
source_modules = ["bento.examples"]
forbidden_modules = ["bento.adapters", "bento.domain", "bento.application"]

# ========================================================================
# Contract 6: Toolkit 独立性
# ========================================================================
[[tool.importlinter.contracts]]
name = "Toolkit independence"
type = "forbidden"
source_modules = ["bento.toolkit"]
forbidden_modules = ["bento.adapters", "bento.interfaces"]
