[project]
name = "contract-governance"
version = "0.1.0"
description = "Enterprise-grade Contract Governance Platform built on Bento Framework"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dateutil>=2.8.0",
]

# PEP 735 Dependency Groups (uv will read this)
[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=4.1,<5.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["contract_governance*"]
namespaces = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
