[project]
name = "my_shop"
version = "0.1.0"
description = "å®Œæ•´æµ‹è¯•é¡¹ç›®"
requires-python = ">=3.12"
dependencies = [
    # åº”ç”¨ç‰¹å®šä¾èµ–
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # ðŸ”„ æ³¨æ„ï¼šå…¶ä»–ä¾èµ–çŽ°åœ¨é€šè¿‡ bento-framework è‡ªåŠ¨å¼•å…¥ï¼š
    # - pydantic>=2.7.0 (é€šè¿‡ bento-framework)
    # - sqlalchemy[asyncio]>=2.0 (é€šè¿‡ bento-framework)
    # - aiosqlite>=0.19.0 (é€šè¿‡ bento-framework)
    # - alembic>=1.13 (é€šè¿‡ bento-framework)
    # - redis>=5.0,<8.0 (é€šè¿‡ bento-framework)
    # - tenacity>=8.2 (é€šè¿‡ bento-framework)
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    # âœ… Bento Framework ä½œä¸ºå¯ç¼–è¾‘å¼€å‘ä¾èµ–
    "bento-framework @ file:///workspace/bento",

    # æµ‹è¯•å’Œå¼€å‘å·¥å…·
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["contexts", "api"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers -ra"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, etc.)",
    "e2e: End-to-end tests (full application)",
    "slow: Slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.uv.sources]
bento-framework = { path = "../../", editable = true }

[dependency-groups]
dev = [
    "bento-framework",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
