[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardian"
version = "0.1.0"
description = "安全审计与策略执行服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.4.2",
    "uvicorn>=0.23.2",
    "idp-framework @ file:///workspace/src/idp/framework", # 本地依赖引用（使用绝对路径）
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true
