[metadata]
name = messaging-admin
version = 0.1.0
description = Pulsar Admin CLI Tool
author = Your Name
license = MIT

[options]
packages = find:
install_requires =
    httpx
    pulsar-client
    asyncio

[options.entry_points]
console_scripts =
    pulsar-admin = messaging_admin.cli.__main__:main
